Fixed responsiveness on mobile.

--- a/styles/aboutMe.css
+++ b/styles/aboutMe.css
@@ -19,7 +19,7 @@
 }
 
 #about-ctr--information p {
-  font-size: 1.3rem;
+  font-size: 1.25rem;
 }
 @media (max-width: 720px) {
   @media (max-height: 800px) {
